@@ -143,7 +143,7 @@ static void app_handler(void *data, const char *app_name,
 	}
 
 	ao2_lock(session);
-	if (session->ws_session) {
+	if (session->ws_session && stasis_app_event_allowed(app_name, message)) {
 		if (stasis_app_get_debug_by_name(app_name)) {
 			char *str = ast_json_dump_string_format(message, ast_ari_json_format());
 
